добавил авторизацию тупейшую

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -12,6 +12,10 @@
         <nav class="site-nav">
             <a href="admin.html">Главная</a>
         </nav>
+        <div class="auth-buttons">
+            <span id="user-name" class="user-name"></span>
+            <button id="logout-btn" class="auth-button">Выйти</button>
+        </div>
     </div>
     <div class="container">
         <h1>Административная страница</h1>
