--- a/public/about.html
+++ b/public/about.html
@@ -16,6 +16,12 @@
             <a href="about.html">О нас</a>
             <a href="contact.html">Контакты</a>
         </nav>
+        <div class="auth-buttons">
+            <a href="/auth/login.html" id="login-btn" class="auth-button">Вход</a>
+            <a href="/auth/register.html" id="register-btn" class="auth-button">Регистрация</a>
+            <span id="user-name" class="user-name"></span>
+            <button id="logout-btn" class="auth-button hidden">Выйти</button>
+        </div>
     </header>
     <div class="container">
         <h1>О нас</h1>
@@ -23,6 +29,6 @@
         <h2>Наша миссия</h2>
         <p>Мы стремимся помочь людям находить и делиться литературой, которая их вдохновляет.</p>
     </div>
-    <script src="script.js"></script>
+    <script src="utility.js"></script>
 </body>
 </html>
