--- a/public/book.html
+++ b/public/book.html
@@ -16,6 +16,12 @@
             <a href="about.html">О нас</a>
             <a href="contact.html">Контакты</a>
         </nav>
+        <div class="auth-buttons">
+            <a href="/auth/login.html" id="login-btn" class="auth-button">Вход</a>
+            <a href="/auth/register.html" id="register-btn" class="auth-button">Регистрация</a>
+            <span id="user-name" class="user-name"></span>
+            <button id="logout-btn" class="auth-button hidden">Выйти</button>
+        </div>
     </header>
     <div class="container book-details-container">
         <div class="book-cover-wrapper">
