--- a/public/contact.html
+++ b/public/contact.html
@@ -16,6 +16,12 @@
             <a href="about.html">О нас</a>
             <a href="contact.html">Контакты</a>
         </nav>
+        <div class="auth-buttons">
+            <a href="/auth/login.html" id="login-btn" class="auth-button">Вход</a>
+            <a href="/auth/register.html" id="register-btn" class="auth-button">Регистрация</a>
+            <span id="user-name" class="user-name"></span>
+            <button id="logout-btn" class="auth-button hidden">Выйти</button>
+        </div>
     </header>
     <div class="container">
         <h1>Контакты</h1>
@@ -23,6 +29,6 @@
         <p><strong>Email:</strong> iav22@tpu.ru</p>
         <p><strong>Телефон:</strong> +8 (914) 041-09-03</p>
     </div>
-    <script src="script.js"></script>
+    <script src="utility.js"></script>
 </body>
 </html>
