--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,14 @@
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="contact.html">Контакты</a></li>
             </ul>
-        </nav>        
+        </nav>   
+        <div class="auth-buttons">
+            <a href="/auth/login.html" id="login-btn" class="auth-button">Вход</a>
+            <a href="/auth/register.html" id="register-btn" class="auth-button">Регистрация</a>
+            <span id="user-name" class="user-name"></span>
+            <button id="logout-btn" class="auth-button hidden">Выйти</button>
+        </div>
+          
     </header>
     
     <div class="container">
