логирование какое то

--- a/public/about.html
+++ b/public/about.html
@@ -29,6 +29,6 @@
         <h2>Наша миссия</h2>
         <p>Мы стремимся помочь людям находить и делиться литературой, которая их вдохновляет.</p>
     </div>
-    <script src="utility.js"></script>
+    <script type="module" src="utility.js"></script>
 </body>
 </html>
