--- a/public/book.html
+++ b/public/book.html
@@ -36,6 +36,6 @@
             <a id="book-download" href="" class="download-link">Скачать книгу</a>
         </div>
     </div>
-    <script src="book.js"></script>
+    <script type="module" script src="book.js"></script>
 </body>
 </html>
