--- a/admin/admin.html
+++ b/admin/admin.html
@@ -23,6 +23,7 @@
             <button class="tab-button active" onclick="openTab('fileCatalog')">Каталог файлов</button>
             <button class="tab-button" onclick="openTab('addFile')"> Добавление файла</button>
             <button class="tab-button" onclick="openTab('downloadRanking')">Рейтинг скачиваний</button>
+            <button class="tab-button" onclick="openTab('userLogs')">Таблица логов</button>
         </div>
         
         <div id="fileCatalog" class="tab-content active">
@@ -86,8 +87,31 @@
                     <option value="15">15</option>
                 </select>
             </div>
-        </div>        
+        </div>   
+        
+        <div id="userLogs" class="tab-content">
+            <h2>Протокол действий пользователей</h2>
+            <table id="log-table">
+                <thead>
+                    <tr>
+                        <th>Дата и время</th>
+                        <th>Действие</th>
+                        <th>Пользователь</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <div id="log-pagination"></div>
+            <div id="log-select">
+                <select id="log-items-per-page">
+                    <option value="3">3</option>
+                    <option value="5">5</option>
+                    <option value="10" selected>10</option>
+                    <option value="15">15</option>
+                </select>
+            </div>
+        </div>
     </div>
-    <script src="admin-script.js"></script>
+    <script type="module" src="admin-script.js"></script>
 </body>
 </html>
