--- a/auth/login.html
+++ b/auth/login.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Авторизация</h1>
         <form id="login-form" class="auth-form">
+            <div id="login-error" class="error-message"></div> 
             <div class="form-group">
                 <label for="login-username">Имя пользователя:</label>
                 <input type="text" id="login-username" name="username" required>
