--- a/auth/register.html
+++ b/auth/register.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Регистрация</h1>
         <form id="register-form" class="auth-form">
+            <div id="register-error" class="error-message"></div>
             <div class="form-group">
                 <label for="register-username">Имя пользователя:</label>
                 <input type="text" id="register-username" name="username" required>
