--- a/public/contact.html
+++ b/public/contact.html
@@ -29,6 +29,6 @@
         <p><strong>Email:</strong> iav22@tpu.ru</p>
         <p><strong>Телефон:</strong> +8 (914) 041-09-03</p>
     </div>
-    <script src="utility.js"></script>
+    <script type="module" src="utility.js"></script>
 </body>
 </html>
