--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,10 @@
         <div class="logo">
             <h1>Библиотека книг</h1>
         </div>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contact.html">Контакты</a></li>
-            </ul>
+        <nav class="site-nav">
+            <a href="index.html">Главная</a>
+            <a href="about.html">О нас</a>
+            <a href="contact.html">Контакты</a>
         </nav>   
         <div class="auth-buttons">
             <a href="/auth/login.html" id="login-btn" class="auth-button">Вход</a>
