--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,7 @@
 <body>
     <header class="site-header">
         <div class="logo">
-            <h1>Библиотека</h1>
+            <h1 class="header-name">Библиотека</h1>
         </div>
         <nav class="site-nav">
             <a href="index.html">Главная</a>
@@ -24,10 +24,10 @@
         </div>
     </header>
     <div class="container">
-        <h1>О нас</h1>
-        <p>Мы - команда любителей книг, создающая платформу для обмена и скачивания книг. Наша цель - сделать литературу доступной для всех!</p>
-        <h2>Наша миссия</h2>
-        <p>Мы стремимся помочь людям находить и делиться литературой, которая их вдохновляет.</p>
+        <h1 class="info">О нас</h1>
+        <p class="info">Мы - команда любителей книг, создающая платформу для обмена и скачивания книг. Наша цель - сделать литературу доступной для всех!</p>
+        <h2 class="info">Наша миссия</h2>
+        <p class="info">Мы стремимся помочь людям находить и делиться литературой, которая их вдохновляет.</p>
     </div>
     <script type="module" src="utility.js"></script>
 </body>
