внешний вид для проекта по проф подготовка на английском языке

--- a/public/book.html
+++ b/public/book.html
@@ -9,7 +9,7 @@
 <body>
     <header class="site-header">
         <div class="logo">
-            <h1>Библиотека книг</h1>
+            <h1>Библиотека</h1>
         </div>
         <nav class="site-nav">
             <a href="index.html">Главная</a>
